--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "canvasesmeducated",
   "version": "1.0.0",
+	"description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
