--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.0",
-    "postcss-preset-env": "^8.3.2",
+    "postcss-preset-env": "^8.4.1",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "npm": "^9.6.7",
     "npm-check-updates": "^16.10.12"
   }
 }
