--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
-    "postcss-preset-env": "^8.5.1",
+    "postcss-preset-env": "^9.0.0",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "overrides": {
+    "semver": "7.5.3"
   }
 }
